# coriander_player

./: .gitignore  .metadata  MSIX_install.md  README.md  ffigen_config.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: -体验版-报告-bug.md  -正式版-报告-bug.md  01-bug_report.yml  02-feature_request.yml  03-enhancement.yml  bug_report.yml  config.yml  enhancement.yml  feature_request.yml  想法-交流.md  提交-bug.md
.github/workflows/: build.yml  opencode.yml  windows_ci.yml
desktop_lyric/: .metadata  README.md  pubspec.yaml
desktop_lyric/lib/: main.dart  message.dart  player_states.dart
desktop_lyric/windows/: CMakeLists.txt
lib/: app_paths.dart  app_preference.dart  app_settings.dart  audio_library.dart  entry.dart  extensions.dart  hotkey_helper.dart  hotkeys_helper.dart  lyric.dart  main.dart  music_matcher.dart  platform_helper.dart  play_service.dart  playlist.dart  search_helper.dart  theme_provider.dart  utils.dart  window_handler.dart  windows_toast.dart
lib/component/: album_tile.dart  app_shell.dart  artist_tile.dart  audio_tile.dart  build_index_state_view.dart  folder_tile.dart  horizontal_lyric_view.dart  mini_now_playing.dart  rectangle_progress_indicator.dart  responsive_builder.dart  scroll_aware_future_builder.dart  settings_tile.dart  side_nav.dart  title_bar.dart
lib/lyric/: krc.dart  lrc.dart  lyric.dart  lyric_converter.dart  lyric_source.dart  qrc.dart
lib/music_api/: music_api.dart  search_helper.dart
lib/page/: album_detail_page.dart  albums_page.dart  (+15 more)
macos/: Podfile
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: installed_font.rs  logger.rs  mod.rs  smtc_flutter.rs  system_theme.rs  tag_reader.rs  utils.rs
rust_builder/: pubspec.yaml
windows/: CMakeLists.txt
(+128 files in other folders)
