[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.32"
lofty = "0.18.1"
chrono = "0.4.31"
serde_json = "1.0.111"
windows = { version = "0.56.0", features = [
    "Media_Playback",
    "Storage",
    "Storage_Streams",
    "Storage_FileProperties",
    "Foundation",
] }
