[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0"
lofty = "0.20.0"
serde_json = "1.0.117"
phf = { version = "0.11", features = ["macros"] }
windows = { version = "0.57.0", features = [
    "Media_Playback",
    "Storage",
    "Storage_Streams",
    "Storage_FileProperties",
    "Storage_Pickers",
    "Foundation",
    "Foundation_Collections",
    "System",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "UI_ViewManagement",
] }
